<resources>
    <string name="app_name">Dissertation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save_note">Save Note</string>
    <string name="budget">Budget</string>
    <string name="weather">weather</string>
    <string name="task">task</string>
    <string name="add_task">Add Task</string>
    <string name="chart">chart</string>
    <string name="view_deleted_notes">View Deleted Notes</string>
    <string name="back_to_notes">Back to Notes</string>
    <string name="inventory">Inventory</string>
    <string name="farmerz">FarmerZ</string>
    <string name="leonard_dascalete_city_ac_uk">Leonard.Dascalete@city.ac.uk</string>
    <string name="Weather">Weather</string>
    <string name="Task">Task</string>
    <string name="Chart">Chart</string>
    <string name="weather_charts">Weather charts</string>
    <string name="budget_charts">Budget charts</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="aggregate_total_0_00">Aggregate Total: $0.00</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="price_amount">Price / Amount</string>
    <string name="date">Date</string>
    <string name="save_budget">Save Budget</string>
    <string name="add_item_s">Add Item/s</string>
    <string name="load_all_items">Load All Items</string>
    <string name="filter_by">Filter By</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="fetch_weather_for_today">Fetch Weather For Today</string>
    <string name="select_specifc_date">Select Specifc Date</string>
    <string name="fetch_weather_5_days_from_now">Fetch Weather 5 Days from Now</string>
    <string name="alert_me_if_precipitation_is_over_50">Alert me if precipitation is over 50%</string>
    <string name="weather_description">Weather Description</string>
    <string name="enter_city_name2">Enter City Name</string>
    <string name="start_date2">Start Date</string>
    <string name="end_date2">End Date</string>
    <string name="alert_me_of_high_precipitation_70"><![CDATA[Alert me of high precipitation (>= 70)]]></string>
    <string-array name="chart_types">
        <item>Total Revenues</item>
        <item>Positive budgets</item>
        <item>Negative budgets</item>
        <item>Net profit or loss</item>
    </string-array>
    <string-array name="weather_chart_types">
        <item>Temperature</item>
        <item>Humidity</item>
        <item>Clouds</item>
        <item>Rain mm</item>
    </string-array>
</resources>