<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_notes"
            android:title="@string/notes"
            android:icon="@drawable/notes" />

        <item android:id="@+id/nav_budget"
            android:title="@string/budget"
            android:icon="@drawable/budget" />

        <item
            android:id="@+id/nav_weather"
            android:title="@string/Weather"
            android:icon="@drawable/weather" />

        <item
            android:id="@+id/nav_task"
            android:title="@string/Task"
            android:icon="@drawable/task" />

        <item
            android:id="@+id/nav_inventory"
            android:title="@string/inventory"
            android:icon="@drawable/inventory" />

        <item
            android:id="@+id/nav_chart"
            android:title="@string/budget_charts"
            android:icon="@drawable/chart" />

        <item
            android:id="@+id/nav_weather_chart"
            android:title="@string/weather_charts"
            android:icon="@drawable/weatherchart" />
    </group>
</menu>