<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewAggregateTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aggregate_total_0_00"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spinnerBudgetType"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <EditText
        android:id="@+id/editTextBudgetType"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/type" />

    <EditText
        android:id="@+id/editTextBudgetDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/editTextBudgetQuantity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/quantity"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextBudgetSellingPrice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/price_amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextBudgetDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/date"
        android:focusable="false"/>

    <Button
        android:id="@+id/buttonSaveBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_budget" />

    <ListView
        android:id="@+id/listViewBudgets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>