<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/add_item_s" />


    <Button
        android:id="@+id/buttonLoadAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_all_items" />

    <Button
        android:id="@+id/buttonFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_by" />

    <ListView
        android:id="@+id/listViewItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
